--- a/apps/finclamp/package.json
+++ b/apps/finclamp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@prime/finclamp",
+  "name": "@orgr/finclamp",
   "version": "1.0.0",
   "type": "module",
   "description": "FinClamp - Complete financial calculator suite for loans, savings, mutual funds, and taxes",
