--- a/.github/workflows/deploy-finclamp.yml
+++ b/.github/workflows/deploy-finclamp.yml
@@ -39,14 +39,21 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
-          cache: "npm"
+          node-version: "20"
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci --include=optional || npm install --legacy-peer-deps --include=optional
 
       - name: Build finclamp
-        run: npm run build:finclamp
+        env:
+          ROLLUP_FORCE_WASM: true
+          NODE_OPTIONS: "--max-old-space-size=4096"
+          CI: true
+        run: |
+          # Try to install missing Rollup dependency if needed
+          npm install @rollup/rollup-linux-x64-gnu --no-save --silent || true
+          npm run build:finclamp
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
