Added deployment changes

--- a/.npmrc
+++ b/.npmrc
@@ -2,9 +2,17 @@
 legacy-peer-deps=true
 
 # Increase timeout for slow networks
-timeout=300000
+timeout=600000
 
 # Retry on failure
-fetch-retries=3
+fetch-retries=5
 fetch-retry-mintimeout=10000
 fetch-retry-maxtimeout=60000
+
+# Additional CI-friendly settings
+audit=false
+fund=false
+progress=false
+
+# Handle optional dependencies properly
+optional=true
