--- a/.github/workflows/deploy-finclamp.yml
+++ b/.github/workflows/deploy-finclamp.yml
@@ -32,6 +32,12 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    env:
+      NPM_CONFIG_TIMEOUT: 600000
+      NPM_CONFIG_FETCH_RETRIES: 3
+      NPM_CONFIG_FETCH_RETRY_MINTIMEOUT: 10000
+      NPM_CONFIG_FETCH_RETRY_MAXTIMEOUT: 60000
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -41,9 +47,30 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Install dependencies
+      - name: Clean and install dependencies
         run: |
-          npm ci --include=optional || npm install --legacy-peer-deps --include=optional
+          # Clean any existing installations
+          rm -rf node_modules package-lock.json
+
+          # Verify workspace structure
+          echo "Workspace structure:"
+          ls -la apps/
+
+          # Install with multiple fallback strategies
+          npm install --legacy-peer-deps --include=optional --timeout=600000 || \
+          npm install --force --legacy-peer-deps --include=optional --timeout=600000 || \
+          (npm cache clean --force && npm install --legacy-peer-deps --include=optional --timeout=600000)
+
+          # Verify workspaces are properly set up
+          npm ls --depth=0 || echo "Workspace listing failed, continuing..."
+
+      - name: Verify installation
+        run: |
+          echo "Checking npm and node versions..."
+          npm --version
+          node --version
+          echo "Checking if Vite is available..."
+          npx vite --version || echo "Vite not found, will install in workspace"
 
       - name: Build finclamp
         env:
@@ -51,10 +78,21 @@ jobs:
           NODE_OPTIONS: "--max-old-space-size=4096"
           CI: true
         run: |
+          # Ensure we're in the right directory and dependencies are available
+          cd apps/finclamp
+
+          # Install workspace-specific dependencies if needed
+          npm install --legacy-peer-deps --timeout=300000 || true
+
           # Try to install missing native dependencies if needed
           npm install @rollup/rollup-linux-x64-gnu --no-save --silent || true
           npm install lightningcss-linux-x64-gnu --no-save --silent || true
-          npm run build:finclamp
+
+          # Verify Vite is available
+          npx vite --version
+
+          # Build the project
+          npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
