--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public - commented out to track static files for finclamp
 
 # Vuepress build output
 .vuepress/dist
