--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,10 @@ jobs:
           npm install
           npm run build
 
+      - name: Add .nojekyll file
+        run: |
+          touch apps/finclamp/dist/.nojekyll
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
