Added deploy configs

--- a/apps/arcade-games/package.json
+++ b/apps/arcade-games/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@orgr/arcade-games",
+  "name": "@orgrj/arcade-games",
   "version": "1.0.0",
   "type": "module",
   "description": "Arcade Games - Collection of classic retro games",
