--- a/apps/skips/package.json
+++ b/apps/skips/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@orgr/skips",
+  "name": "@orgrj/skips",
   "version": "1.0.0",
   "type": "module",
   "description": "Skips - Multi-modal memory training game for cognitive enhancement",
