--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@orgr/shared",
+  "name": "@orgrj/shared",
   "version": "1.0.0",
   "type": "module",
   "description": "Shared utilities and components for Prime monorepo",
