--- a/apps/finclamp/package.json
+++ b/apps/finclamp/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^19.1.1",
     "react-tabs": "^6.1.0",
     "recharts": "^3.1.0",
     "tailwindcss": "^3.4.0"
