--- a/apps/finclamp/public/manifest.json
+++ b/apps/finclamp/public/manifest.json
@@ -17,49 +17,49 @@
   "scope": "./",
   "icons": [
     {
-      "src": "/android-chrome-192x192.svg",
+      "src": "./android-chrome-192x192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/android-chrome-512x512.svg",
+      "src": "./android-chrome-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/apple-touch-icon.svg",
+      "src": "./apple-touch-icon.svg",
       "sizes": "180x180",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/android-chrome-192x192.svg",
+      "src": "./android-chrome-192x192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "maskable"
     },
     {
-      "src": "/android-chrome-512x512.svg",
+      "src": "./android-chrome-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "maskable"
     },
     {
-      "src": "/android-chrome-192x192-monochrome.svg",
+      "src": "./android-chrome-192x192-monochrome.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "monochrome"
     },
     {
-      "src": "/android-chrome-512x512-monochrome.svg",
+      "src": "./android-chrome-512x512-monochrome.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "monochrome"
     },
     {
-      "src": "/favicon-monochrome.svg",
+      "src": "./favicon-monochrome.svg",
       "sizes": "32x32",
       "type": "image/svg+xml",
       "purpose": "monochrome"
