Added gateway changes

--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "dev": "npm run dev --workspace=apps/finclamp",
     "dev:all": "node scripts/dev-all.js",
     "dev:all-no-finclamp": "node scripts/dev-all.js --exclude-finclamp",
-    "dev:finclamp": "npm run dev --workspace=apps/finclamp",
-    "dev:arcade": "npm run dev --workspace=apps/arcade-games",
-    "dev:engaged": "npm run dev --workspace=apps/engaged",
-    "dev:skips": "npm run dev --workspace=apps/skips",
+    "dev:finclamp": "npm run dev --workspace=apps/finclamp -- --port 5173",
+    "dev:arcade": "npm run dev --workspace=apps/arcade-games -- --port 5174",
+    "dev:engaged": "npm run dev --workspace=apps/engaged -- --port 5175",
+    "dev:skips": "npm run dev --workspace=apps/skips -- --port 5176",
     "gateway": "node gateway/index.js",
     "gateway:dev": "nodemon gateway/index.js",
     "apis:start": "concurrently \"cd apps/api-finclamp-go && go run main.go\" \"cd apps/api-arcade-go && go run main.go\" \"cd apps/api-engaged-go && go run main.go\" \"cd apps/api-skips-go && go run main.go\"",
+    "frontends:start": "concurrently \"npm run dev:finclamp\" \"npm run dev:arcade\" \"npm run dev:engaged\" \"npm run dev:skips\"",
+    "fullstack:dev": "concurrently \"npm run apis:start\" \"npm run frontends:start\" \"sleep 15 && npm run gateway:dev\"",
+    "fullstack:clean": "./scripts/start-clean.sh",
     "system:start": "./scripts/start-system.sh",
     "system:stop": "./scripts/stop-system.sh",
     "system:restart": "npm run system:stop && sleep 2 && npm run system:start",
+    "fullstack:stop": "./scripts/stop-fullstack.sh",
+    "fullstack:restart": "npm run fullstack:stop && sleep 3 && npm run fullstack:dev",
     "system:dev": "concurrently \"npm run apis:start\" \"npm run gateway:dev\"",
     "build": "npm run build --workspaces --if-present",
     "build:all-no-finclamp": "npm run build:arcade && npm run build:engaged && npm run build:skips",
