Added build changes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dev:skips": "npm run dev --workspace=apps/skips -- --port 5176",
     "gateway": "node gateway/index.js",
     "gateway:dev": "nodemon gateway/index.js",
+    "gateway:api": "node gateway/simple-api-gateway.js",
+    "gateway:api:dev": "nodemon gateway/simple-api-gateway.js",
     "apis:start": "concurrently \"cd apps/api-finclamp-go && go run main.go\" \"cd apps/api-arcade-go && go run main.go\" \"cd apps/api-engaged-go && go run main.go\" \"cd apps/api-skips-go && go run main.go\"",
     "frontends:start": "concurrently \"npm run dev:finclamp\" \"npm run dev:arcade\" \"npm run dev:engaged\" \"npm run dev:skips\"",
     "fullstack:dev": "concurrently \"npm run apis:start\" \"npm run frontends:start\" \"sleep 15 && npm run gateway:dev\"",
@@ -35,6 +37,9 @@
     "build:arcade": "npm run build --workspace=apps/arcade-games",
     "build:engaged": "npm run build --workspace=apps/engaged",
     "build:skips": "npm run build --workspace=apps/skips",
+    "build:github": "node scripts/build-all.js production",
+    "build:github:staging": "node scripts/build-all.js staging",
+    "build:app": "node scripts/build-app.js",
     "test": "npm run test --workspaces --if-present",
     "test:all-no-finclamp": "npm run test:arcade && npm run test:engaged && npm run test:skips",
     "test:finclamp": "npm run test --workspace=apps/finclamp",
@@ -45,6 +50,12 @@
     "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
     "install:all": "npm install",
     "deploy:finclamp": "npm run deploy --workspace=apps/finclamp",
+    "deploy:github": "node scripts/deploy.js production",
+    "deploy:github:staging": "node scripts/deploy.js staging",
+    "deploy:github:skip-build": "node scripts/deploy.js production --skip-build",
+    "serve:built": "node scripts/build-and-serve.js production 3000",
+    "serve:built:staging": "node scripts/build-and-serve.js staging 3000",
+    "serve:built:skip-build": "node scripts/build-and-serve.js production 3000 --skip-build",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
