Added build changes

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "build:github": "node scripts/build-all.js production",
     "build:github:staging": "node scripts/build-all.js staging",
     "build:app": "node scripts/build-app.js",
+    "build:single": "node scripts/build-single-app.js",
+    "build:single:finclamp": "APP_NAME=finclamp node scripts/build-single-app.js",
+    "build:single:arcade": "APP_NAME=arcade node scripts/build-single-app.js",
+    "build:single:engaged": "APP_NAME=engaged node scripts/build-single-app.js",
+    "build:single:skips": "APP_NAME=skips node scripts/build-single-app.js",
     "test": "npm run test --workspaces --if-present",
     "test:all-no-finclamp": "npm run test:arcade && npm run test:engaged && npm run test:skips",
     "test:finclamp": "npm run test --workspace=apps/finclamp",
