--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "build:engaged": "npm run build --workspace=apps/engaged",
     "build:skips": "npm run build --workspace=apps/skips",
     "build:github": "node scripts/build-all.js production",
+    "deploy:root": "node scripts/deploy-to-root.cjs",
     "build:github:staging": "node scripts/build-all.js staging",
     "build:app": "node scripts/build-app.js",
     "build:single": "node scripts/build-single-app.js",
