--- a/apps/finclamp/package.json
+++ b/apps/finclamp/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/",
+    "build:github": "vite build --base=/OrgRJ/",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
