Fix GitHub Pages base URL - remove /OrgRJ/ prefix
- Update build:github script to use --base=/ instead of --base=/OrgRJ/
- All assets now use correct root paths (/assets/ instead of /OrgRJ/assets/)
- 404.html already updated to use / base path
- Local testing confirms all assets load correctly
- Ready for GitHub Pages deployment from root domain

--- a/apps/finclamp/package.json
+++ b/apps/finclamp/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/",
-    "build:github": "vite build --base=/OrgRJ/",
+    "build:github": "vite build --base=/",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
